; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/host_applications/linux/apps/raspicam/extr_RaspiHelpers.c_print_app_details.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/host_applications/linux/apps/raspicam/extr_RaspiHelpers.c_print_app_details.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@app_name = common dso_local global i8* null, align 8
@.str = private unnamed_addr constant [9 x i8] c"Un-named\00", align 1
@.str.1 = private unnamed_addr constant [33 x i8] c"\0A\22%s\22 Camera App (commit %s%s)\0A\0A\00", align 1
@GIT_COMMIT_ID = common dso_local global i8* null, align 8
@TAINTED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @print_app_details(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i8*, i8** @app_name, align 8
  %4 = icmp ne i8* %3, null
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i8** @app_name, align 8
  br label %6

6:                                                ; preds = %5, %1
  %7 = load i32*, i32** %2, align 8
  %8 = load i8*, i8** @app_name, align 8
  %9 = call i8* @basename(i8* %8)
  %10 = load i8*, i8** @GIT_COMMIT_ID, align 8
  %11 = load i32, i32* @TAINTED, align 4
  %12 = call i32 @fprintf(i32* %7, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.1, i64 0, i64 0), i8* %9, i8* %10, i32 %11)
  ret void
}

declare dso_local i32 @fprintf(i32*, i8*, i8*, i8*, i32) #1

declare dso_local i8* @basename(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
